--- a/README.me
+++ b/README.me
@@ -1,4 +1,5 @@
-numbers: 63106295, 32852236, 61885093
-tags: freshdirect, yum apt brew, salir (summa cum laude)
+numbers: 63106295, 32852236, 61885093, 61826958, 59430178
+tags: freshdirect, yum apt brew, salir (summa cum laude), null, sporty
 pin: pin, ' ' = - (@/, not /p)
-NUMBERS ARE PRECEDING
+NUMBERS ARE PRECEDING!!!
+1, 2, 3 >>>
